tests/compile-fail/use_undefined_rule.stderr
error: undefined rule `foo`
 --> $DIR/use_undefined_rule.rs:4:18
  |
4 |     rule bar() = foo() //~ ERROR undefined rule `foo`
  |                  ^^^
